# ght

./: .gitignore  README.md  ght.conf.yaml.example  ght.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-test.in  requirements-test.txt  requirements.in  requirements.txt
.reuse/: dep5
src/ght/: __main__.py  github.py  todoist.py
